# pubmed-dataset

./: .gitignore  README.md  pyproject.toml
src/pubmed/: __init__.py  benchmark.py  main.py
src/pubmed_dataset/: benchmark.py  entry.py  entryset.py
